Update add/update address endpoints with explicit check for user exists
And return a more helpful 404 in that case instead of a generic 500 error
