# docs/swagger.json
@@ -64,7 +64,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/common.ApiError"
+                            "$ref": "#/definitions/controllers.ApiError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ApiError"
                         }
                     }
                 }
@@ -99,13 +105,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/common.ApiError"
+                            "$ref": "#/definitions/controllers.ApiError"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/common.ApiError"
+                            "$ref": "#/definitions/controllers.ApiError"
                         }
                     }
                 }
@@ -150,13 +156,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/common.ApiError"
+                            "$ref": "#/definitions/controllers.ApiError"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/common.ApiError"
+                            "$ref": "#/definitions/controllers.ApiError"
                         }
                     }
                 }
@@ -186,13 +192,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/common.ApiError"
+                            "$ref": "#/definitions/controllers.ApiError"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/common.ApiError"
+                            "$ref": "#/definitions/controllers.ApiError"
                         }
                     }
                 }
@@ -250,7 +256,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/common.ApiError"
+                            "$ref": "#/definitions/controllers.ApiError"
                         }
                     }
                 }
@@ -285,13 +291,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/common.ApiError"
+                            "$ref": "#/definitions/controllers.ApiError"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/common.ApiError"
+                            "$ref": "#/definitions/controllers.ApiError"
                         }
                     }
                 }
@@ -333,13 +339,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/common.ApiError"
+                            "$ref": "#/definitions/controllers.ApiError"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/common.ApiError"
+                            "$ref": "#/definitions/controllers.ApiError"
                         }
                     }
                 }
@@ -366,13 +372,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/common.ApiError"
+                            "$ref": "#/definitions/controllers.ApiError"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/common.ApiError"
+                            "$ref": "#/definitions/controllers.ApiError"
                         }
                     }
                 }
@@ -411,13 +417,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/common.ApiError"
+                            "$ref": "#/definitions/controllers.ApiError"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/common.ApiError"
+                            "$ref": "#/definitions/controllers.ApiError"
                         }
                     }
                 }
@@ -425,7 +431,7 @@
         }
     },
     "definitions": {
-        "common.ApiError": {
+        "controllers.ApiError": {
             "type": "object",
             "properties": {
                 "error": {},
